upgrade to run with groovy to 4 and java 24